Fix even spacing in flex

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ a:hover {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin: 50px 100px;
 }
 
